--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
+# # # ------------------ Folders ------------------ # # #
 RBES_Assignment/actrEnv
-Tree_Assignment_2
-AI_Model_Cards_Assignment
+Tree_Assignment_2/malmoEnv
+Tree_Assignment_2/student_files/malmoenv
+Tree_Assignment_2/student_files/Minecraft
 Final_Project
 
 
 
 
-
+# # # ------------------ RBES Assignment ------------------ # # #
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -123,3 +125,23 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+
+
+# # # ------------------AI_Model_Cards_Assignment------------------ # # #
+*.hdf5
+*.h5
+logs/
+.vscode/
+__pycache__
+dist
+build
+*.egg-info
+images/**
+!images/ReadMe.md
+# Ignore my Visual Studio solution for editing python
+NSFWModel/**
+trained_models/**
+training/train_best_models.cmd
+*.DS_Store
