--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ RBES_Assignment/actrEnv
 Tree_Assignment_2/malmoEnv
 Tree_Assignment_2/student_files/malmoenv
 Tree_Assignment_2/student_files/Minecraft
-Final_Project
+HiLite-AIAutoHighlighter
 
 
 
